# docs/swagger.yaml
@@ -990,6 +990,27 @@ paths:
       tags:
       - Auth
   /payment:
+    get:
+      description: Mengembalikan seluruh riwayat pembayaran dari semua user di dalam
+        sistem
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Payment'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Ambil semua data pembayaran (Khusus Admin)
+      tags:
+      - Payment
     post:
       consumes:
       - application/json
@@ -1028,6 +1049,32 @@ paths:
       security:
       - BearerAuth: []
       summary: Proses Pembayaran Tiket
+      tags:
+      - Payment
+  /payment/my-history:
+    get:
+      description: Mengembalikan daftar semua pembayaran sukses/gagal milik user yang
+        sedang login
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Payment'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Ambil riwayat pembayaran user
       tags:
       - Payment
   /refund:
